--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@designbycode/tailwindcss-text-stroke": "^1.3.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "react": "19.1.0",
